[project]
name = "suai-term-psi"
version = "0.1.0"
description = ""
authors = [
    {name = "Bbar0n234",email = "vilnus1337@mail.ru"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "mmh3 (>=5.1.0,<6.0.0)",
    "tenseal (>=0.3.16,<0.4.0)",
    "fastecdsa (>=3.0.1,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
